--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,12 @@
-<h1> YO </h1>
+<div class="wrapper">
+  <div id="investors">
+    <br>
+    <br>
+    <input type="number" placeholder="Investment">
+    <br>
+    <br>
+  </div>
+  <br>
+  <button type="button">Calculate Percentages</button>
+  <button type="button" onclick="addInvestor()">Add Investment</button>
+</div>
