attempting total map js

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,6 +7,6 @@
     <br>
   </div>
   <br>
-  <button type="button">Calculate Percentages</button>
+  <button type="button" onclick="calculateTotal()">Calculate Percentages</button>
   <button type="button" onclick="addInvestor()">Add Investment</button>
 </div>
