--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,6 @@
 <div class="wrapper">
-  <h1>I <3 Peter</h1>
+<span class="mega-octicon octicon-heart"></span>
+  <h1>I  Peter</h1>
   <div id="investors">
     <br>
     <br>
