--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,8 @@
 <div class="wrapper">
-<span class="mega-octicon octicon-heart"></span>
-  <h1>I  Peter</h1>
+  <br>
+  <br>
+  <br>
+  <h1>I <span class="mega-octicon octicon-heart"></span> Peter </h1>
   <div id="investors">
     <br>
     <br>
